src/scss/main.scss
@import 'variables';
@import 'animations';

.hidden {
  display: none;
}

html, body {
  margin: 0;
  padding: 0;
  height: 100%;
}

html {
  font-family: $font-sans;
  font-size: $font-size;
  line-height: 1.33em;
}

body {
  color: $color-black;
  background-color: $color-light-grey;
  padding-top: $body-padding;
  overflow-x: hidden;
}

#menu-toggle {
  display: none;

  &:checked {
    ~ .hero {
      nav {
        left: 0;
      }
    }
  }
}

div, header, article, ul, .button, footer {
  display: block;
  box-sizing: border-box;
}

footer {
  font-size: 0.83rem;
  padding: $spacing-default #{$spacing-default + $spacing-horizontal};
  background-color: $color-dark-grey;  
}

.button-wrapper {
  padding: $spacing-default;
  border-bottom: none;
  cursor: pointer;
}

.button-round {
  border-radius: $border-radius;
  display: flex;
  align-items: center;
  box-shadow: 0 2px 2px 1px $color-dark-grey;

  .icon-wrapper {
    height: $button-size;
    width: $button-size;
    border-radius: $border-radius;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .caption {
    padding: 0 #{$spacing-default * 1.5} 0 $spacing-default;
    margin: 0 auto;
  }
}

.hamburger {
  .bar {
    height: 4px;
    background-color: $color-white;
    margin: 5px 0;
    border-radius: 2px;
    transition: 0.5s;
  }  
}

#menu-toggle {
  &:checked {
    ~ header {
      .hamburger {
        .bar {
          &-1 {
            transform: rotate(-45deg) translate(-6px,6px);
          }
          &-2 {
            opacity: 0;
          }
          &-3 {
            transform: rotate(45deg) translate(-6.5px, -7px);
          }
        }
      }
    }
  }
}

.menu-toggle {
  .icon-wrapper {
    background-color: $color-darker-grey;
  }

  .hamburger-container {
    width: 50%;
  }
}

@include buzz(2%, 2, 16, 2, 8);
@include zoom-in-out(1.33, 0.5, 3, 2, 6);
@include reverse-colors($color-white, $color-green, 0.5, 3, 2, 6);

.phone-button {
  background-color: $color-green;
  color: $color-white;

  .icon-wrapper {
    background-color: $color-white;
    //animation: zoom-in-out 12s infinite, reverse-colors 12s infinite;
    border: 1px $color-green solid;
    fill: $color-green;
  }

  svg {
    width: 50%;
    //animation: buzz 12s infinite;
  }
}

header {
  position: fixed;
  top: 0px;
  left: 0px;
  width: 100%;
  height: $header-height;
  background-color: $color-light-grey;
  padding: 0;
  z-index: 1;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  box-shadow: 0 3px 3px 0 $color-dark-grey;
}

h1, h2, h3, h3 {
  font-family: $font-serif;
  font-weight: normal;
  color: $color-light-blue;  
}
h1 { 
  font-size: 1.825rem;
  line-height: 1.25em;
}
h2 { 
  font-size: 1.5rem;
  line-height: 1.25em;
}
h3 { 
  font-size: 1.325rem;
  line-height: 1.2em;
}
h4 { 
  font-size: 1.15rem;
  line-height: 1.15em;
}

.name {
  font-family: $font-serif;
  text-align: center;
  font-size: 1.5rem;
}

.title {
  font-family: $font-sans;
  font-size: 1.25rem;
  line-height: 1.125rem;
  color: $color-light-blue;
  text-align: center;
}

.intro {
  margin-top: $spacing-default;
  margin-bottom: $spacing-default;

  .photo {
    margin: 0 auto $spacing-default;
    width: 6rem;
    height: 6rem;
  }
}

article {  
  padding: $spacing-default $spacing-horizontal;
  background-color: $color-white;
}

a {
  text-decoration: none;
  color: $color-light-blue;
  border-bottom: 1px dotted;
}

.nolink {
  a {
    color: $color-black;
    border-bottom: none;
  }
}

.photo {
  background-color: $color-white;
  background: url('../assets/aleksandra-hotala.jpg');
  background-position: center;
  background-size: cover;
  border-radius: 50%;
  box-shadow: 0 2px 2px 1px $color-dark-grey;
}

nav {
  position: fixed;
  top: $header-height;
  left: -100%;
  margin: 0;
  width: 100%;
  height: calc(100% - #{$header-height});
  background-color: $color-white;
  transition: 0.5s;
  z-index: 3;    

  ul {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    margin: $spacing-default 0;
    padding: 0;

    li {
      font-size: 1rem;
      list-style-type: none;
      padding: 0;
      margin: 0;
      line-height: 3rem;

      a {
        display: flex;
        align-items: center;
        border-bottom: 1px $color-light-grey solid;
        padding: 0 $spacing-default;

        svg {
          width: 1.5rem;
          height: 1.5rem;
          margin-right: 1rem;
          fill: $color-light-blue;
        }
      }
    }
  }
}

.hero {
  padding: $spacing-default;
  display: flex;
  flex-direction: row;

  .main {
    flex-grow: 1;
    background-color: $color-white;
    box-shadow: 3px 3px 3px 0px $color-dark-grey;
    border-radius: 5px;
    flex-grow: 1;
  }
}

.services {
  display: flex;
  flex-direction: column;
  padding: 0 $spacing-default $spacing-default;
}

svg#defs {
  position: fixed;
  z-index: -1;
  height: 0;
}

